# deep_learning

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: intro.typ  least_squares_pseudoinverse.typ  phase1_crash_course.typ  phase2_crash_course.typ  phase3_crash_course.typ
docs/time_series_forecasting/: phase1_classical_baselines.typ  phase2_core_dl.typ  phase3_foundation_models.typ  phase4_evaluation.typ  phase5_mini_project.typ  ts_forecasting_curriculum.typ  ts_transformers.typ
src/beyond_backprop/: constants.py  elm.py  mnist.py  rbm.py  transformer.py  viewer.js  viewer.py
src/time_series/: __init__.py  load_data.py  phase1_hourly.py  validate.py
test/: test_elm.py  test_mnist.py  test_time_series.py  test_transformer.py
