[project]
name = "beyond-backprop"
version = "0.1.0"
description = "Math-first implementations of alternative neural network architectures, benchmarked on MNIST"
requires-python = ">=3.14"
dependencies = [
    "loguru>=0.7.3",
    "numpy>=2.0",
    "polars>=1.40.1",
    "torch>=2.12.0",
]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.pytest.ini_options]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "gradio>=5.0",
    "jupyterlab>=4.5.7",
]
