[project]
name = "beyond-backprop"
version = "0.1.0"
description = "Math-first implementations of alternative neural network architectures, benchmarked on MNIST"
requires-python = ">=3.14"
dependencies = [
    "inflection>=0.5.1",
    "kaggle>=2.2.1",
    "loguru>=0.7.3",
    "numpy>=2.0",
    "pointblank>=0.24.0",
    "polars>=1.40.1",
    "torch>=2.12.0",
    "tqdm>=4.67.3",
]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.pytest.ini_options]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "gradio>=5.0",
    "jupyterlab>=4.5.7",
]
